# Loomen

./: .env.example  .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  NOTE_SAFETY_RULES.md  README.ar.md  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  cla.yml  release.yml
LoomenWiki/gelistirme-sureci/: ai-gelistirme-donguleri-ve-onay-mekanizmasi.md
demo-vault/: Inbox.md  Yapılacaklar.md
demo-vault/Daily/: 2026-06-16-Salı.md  2026-06-17-Çarşamba.md
demo-vault/Günlük/2026/06-Haziran/: 2026-06-17-Çarşamba.md
demo-vault/Notlar/: Fikirler.md  Proje X.md
design/loomen/: README.md
design/loomen/chats/: chat1.md
design/loomen/project/: .thumbnail  Loomen.dc.html
docs/: yayinlama.md
docs/planning/: 00-README.md  01-spec.md  02-mvp-scope.md  03-system-design.md  04-tech-stack.md  05-acceptance-criteria.md  06-planlayici-pomodoro.md  07-i18n.md  08-design-system.md
scripts/: mas-build.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.mas.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: github.rs  github_api.rs  github_git.rs  google.rs  lib.rs  macos_bookmark.rs  main.rs
src/components/: Explorer.tsx  MobileBar.tsx  MobileDrawer.tsx  MobileTopBar.tsx  Ribbon.tsx  RightPanel.tsx  SyncStatus.tsx  TopBar.tsx  TrashModal.tsx
src/core/: audioMeta.ts  bookmark.ts  flac.ts  github.ts  google.ts  sound.ts  wav.ts
src/core/__test__/: vaultTest.ts
src/core/markdown/: links.ts  taskParser.ts
src/core/search/: search.ts
src/core/vault/: dailyTemplate.ts  grouping.ts  index.ts  sampleBackend.ts  tauriBackend.ts  trash.ts  types.ts
src/data/: sampleVault.ts
src/hooks/: useIsMobile.ts  useWaveBarCount.ts
src/i18n/: index.ts
src/i18n/locales/ar/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/tr/: translation.json
src/lib/: relativeDate.ts
src/screens/Draw/: DrawScreen.tsx
src/screens/Editor/: AudioEmbedPlayer.tsx  BacklinksPanel.tsx  CodeMirrorEditor.tsx  DailyHeader.tsx  EditorContextMenu.tsx  EditorScreen.tsx  EditorToolbar.tsx  Markdown.tsx  PlainTextEditor.tsx  PlainToolbar.tsx  VoiceRecorder.tsx  WikiLink.tsx  editorCommands.ts  livePreview.ts  noteCaret.ts  plainFormat.ts  tableWidget.ts
src/screens/Graph/: GraphScreen.tsx
src/screens/Help/: HelpScreen.tsx
src/screens/NewTab/: NewTabScreen.tsx
src/screens/Planner/: Board.tsx  CalendarCard.tsx  DailyPlanView.tsx  DatePicker.tsx  FocusExpanded.tsx  FocusTasksCard.tsx  MiniAgenda.tsx  PanelToggles.tsx  PlannerScreen.tsx  PomodoroCard.tsx  QuickAdd.tsx  StatCards.tsx  Stepper.tsx  TaskDetail.tsx  TaskRow.tsx  TasksAgenda.tsx  Timeline.tsx
src/screens/Reports/: ReportsScreen.tsx
src/screens/Settings/: GitHubSync.tsx  GoogleCalendarSync.tsx  RepoPickerSheet.tsx  SettingsScreen.tsx  TemplatesSettings.tsx  VaultManager.tsx
src/store/: useAppStore.ts
src/styles/: app.css  tokens.css
