[package]
name = "loomen"
version = "0.1.0"
description = "Loomen — tamamen lokal Obsidian klonu + gömülü planlayıcı"
authors = ["Faruk Erol"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (Windows).
name = "loomen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# GitHub senkronizasyonu: HTTP (rustls → openssl gerekmez) + git (vendored libgit2, macOS'ta Secure Transport)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "https"] }

