[package]
name = "loomen"
version = "0.1.0"
description = "Loomen — tamamen lokal Obsidian klonu + gömülü planlayıcı"
authors = ["Faruk Erol"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (Windows).
name = "loomen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
# Mobil OAuth redirect'i özel şema (loomen://) ile yakalamak için (loopback mobilde yok)
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP istemcisi: rustls → openssl gerekmez, mobil dahil cross-compile olur.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Google Takvim OAuth: PKCE (sha256 + base64url) + güvenli rastgele (verifier/state)
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
# GitHub REST (Git Data API) senkronu: git blob SHA-1 hesabı (github_api.rs, tüm platformlar)
sha1 = "0.10"

# GitHub git senkronizasyonu YALNIZ masaüstü. git2'nin `https` feature'ı openssl-sys çeker;
# iOS/Android cross-compile'da OpenSSL bulunamaz (build hatası). Mobilde derlemeye girmez.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "https"] }

# macOS App Store (sandbox): kullanıcının seçtiği kasa klasörüne erişimi uygulama yeniden
# açıldığında da sürdürebilmek için security-scoped bookmark gerekir. Tauri'de yerleşik
# desteği yok (tauri-apps/tauri#3716), NSURL API'leri objc2 ile çağrılır.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSURL", "NSString", "NSData", "NSError", "NSDictionary", "NSArray"] }
